# LongNumbers

./: .gitignore  CMakeLists.txt  README.md  natural.cc  polynomial.cc
.github/workflows/: cmake-single-platform.yml
libraries/: CMakeLists.txt
libraries/numbers/: CMakeLists.txt
libraries/numbers/include/: integer.h  natural.h  polynomial.h  rational.h
libraries/numbers/src/: integer.cc  natural.cc  polynomial.cc  rational.cc
libraries/numbers/tests/: CMakeLists.txt  test_integer.cc  test_natural.cc  test_polynomial.cc  test_rational.cc
src/: input.cc  input.h  main.cc  menu.cc  menu.h  operations.cc  operations.h
src/modules/: N.cc  N.h  Z.cc  Z.h  integer.cc  integer.h  natural.cc  natural.h  polynomial.cc  polynomial.h  rational.cc  rational.h
